logs/Slang/chapter-5/5.7.1--integers-unsized-illegal.sv.log
name: integers-unsized-illegal
description: Integer literal constants
should_fail: 1
tags: 5.7.1
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.7.1--integers-unsized-illegal.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.7.1--integers-unsized-illegal.sv:11:10: error: expected ';'
    a = 4af; // is illegal (hexadecimal format requires 'h)
         ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.7.1--integers-unsized-illegal.sv:11:10: error: use of undeclared identifier 'af'
    a = 4af; // is illegal (hexadecimal format requires 'h)
         ^~
